fixed overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,3 @@
-html body {
-
-  margin: 0;
-
-  padding: 0;
-
-  width: 100%;
-
-  height: 100%;
-
-}
-
-
-.App {
-
-  text-align: center;
-
-}
-
-
 .markdown-text img {
 
   max-width: 100%;
